@@ -4,6 +4,7 @@ lib/Acme/MetaSyntactic/bee_gees.pm
 lib/Acme/MetaSyntactic/charlies_angels.pm
 lib/Acme/MetaSyntactic/compass.pm
 lib/Acme/MetaSyntactic/evangelist.pm
+lib/Acme/MetaSyntactic/jelly_belly.pm
 lib/Acme/MetaSyntactic/michelin.pm
 lib/Acme/MetaSyntactic/nehi.pm
 lib/Acme/MetaSyntactic/sodor.pm
@@ -13,6 +14,8 @@ t/000_basic.t
 t/100_metasyntactic.t
 t/950_pod.t
 t/960_pod_coverage.t
+t/980_versions.t
+t/982_git.t
 Changes
 README
 META.yml                                 Module YAML meta-data (added by MakeMaker)
