@@ -15,7 +15,7 @@ configure_requires:
   strict: 0
   warnings: 0
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112150'
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120921'
 keywords: []
 license: mit
 meta-spec:
@@ -28,13 +28,15 @@ no_index:
     - inc
 requires:
   Acme::MetaSyntactic: 1
+  Acme::MetaSyntactic::List: 1
+  Acme::MetaSyntactic::Locale: 1
   Acme::MetaSyntactic::MultiList: 1
   perl: 5.006
   strict: 0
   warnings: 0
 resources:
   repository: git://github.com/Abigail/Acme-MetaSyntactic-Themes-Abigail.git
-version: 2012053101
+version: 2012053102
 x_test_requires:
   Test::MetaSyntactic: 1
   Test::More: 0.88
