@@ -29,7 +29,9 @@ my %args = (
         'strict'                           =>  0,
         'warnings'                         =>  0,
         'Acme::MetaSyntactic'              =>  1.00,
+        'Acme::MetaSyntactic::List'        =>  1.00,
         'Acme::MetaSyntactic::MultiList'   =>  1.00,
+        'Acme::MetaSyntactic::Locale'      =>  1.00,
     },
     MIN_PERL_VERSION     =>   5.006,
     AUTHOR               =>  "$ME <$LOCAL_ADDR\@$DOMAIN>",
